--- a/static/themes/neon-dark.css
+++ b/static/themes/neon-dark.css
@@ -46,6 +46,9 @@
 [data-bs-theme=neon-dark] .primary .card {
   background-color: rgb(35, 35, 35);
 }
+[data-bs-theme=neon-dark] .primary .card .card-text {
+  color: rgb(57, 255, 20);
+}
 [data-bs-theme=neon-dark] .primary .list-group-item {
   background-color: rgb(35, 35, 35);
   color: rgb(57, 255, 20);
@@ -112,9 +115,6 @@
 }
 [data-bs-theme=neon-dark] .primary .dataTables_wrapper {
   color: rgb(229, 229, 229);
-}
-[data-bs-theme=neon-dark] .primary .card-text {
-  color: rgb(57, 255, 20);
 }
 [data-bs-theme=neon-dark] .primary .dropdown-menu {
   background-color: rgb(35, 35, 35);
